update in all forms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Transport</string>
+    <string name="app_name">Dela Rosa</string>
 
     <!--Device List-->
     <string name="scanning">scanning…</string>
